# kokkos-tools

./: .clang-format  .gitignore  .gitmodules  Build.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Copyright.txt  LICENSE  README.md  build-all.sh  kokkos.presets.json
.github/workflows/: build-with-kokkos.yml  clang-format-check.yml  simple-build.yml
cmake/: AddGitSubmodule.cmake  BuildGTest.cmake  FindApex.cmake  FindITT.cmake  FindPAPI.cmake  configure_tpls.cmake  configure_variorum.cmake  utils.cmake
code-example/simple/: main.cpp
common/: FrameType.hpp  SpaceHandle.hpp  kp_config.hpp.in  utils_time.hpp
common/include/impl/: Kokkos_Profiling_C_Interface.h
common/kernel-filter/: CMakeLists.txt  Makefile  kp_kernel_filter.cpp
common/kernel-filter/kokkos-sampler/: kp_sampler_skip.cpp
common/kokkos-sampler/: CMakeLists.txt  Makefile  README.md  kp_sampler.cpp  kp_sampler_skip.cpp
common/passthrough/: Makefile  passthrough.cpp
common/sampler/: Makefile  sampler.cpp
common/utils/: demangle.hpp
debugging/checkpointing/: Makefile  checkpointing.proto  example.cpp  kp_kernel_logger.cpp  puppies.cpp  reader.cpp
debugging/checkpointing/protocols/: checkpointing.pb.cc  checkpointing.pb.h
debugging/dump-views/: Makefile  kp_kernel_logger.cpp  reader.cpp
debugging/kernel-logger/: CMakeLists.txt  Makefile  kp_kernel_logger.cpp
example/: CMakeLists.txt  kernels.hpp  main.cpp
include/: tool_chain.hpp
include/impl/: Kokkos_Profiling_C_Interface.h  Kokkos_Profiling_DeviceInfo.hpp  Kokkos_Profiling_Interface.hpp
profiling/all/: CMakeLists.txt  kp_all.cpp  kp_all.hpp  kp_core.hpp  kp_event_sets.hpp
profiling/all/impl/: Kokkos_Profiling_C_Interface.h  Kokkos_Profiling_Interface.hpp
profiling/caliper-connector/: README.md
profiling/chrome-tracing/: CMakeLists.txt  Makefile  kp_chrome_tracing.cpp
profiling/functor-size/: CMakeLists.txt  Makefile  kp_functor_size.cpp
profiling/kokkos-sampler/: Makefile
profiling/kpp3-verifier/: Makefile  kp_ecp_kpp3.cpp  kp_kernel_info.h
profiling/ldms-kokkos-sampler/: Makefile  kp_sampler.cpp
profiling/memory-events/: CMakeLists.txt  Makefile  kp_memory_events.cpp  kp_memory_events.hpp  kp_timer.hpp
profiling/memory-hwm/: CMakeLists.txt  Makefile  kp_hwm.cpp
profiling/memory-hwm-mpi/: CMakeLists.txt  Makefile  kp_hwm_mpi.cpp
profiling/memory-usage/: CMakeLists.txt  Makefile  kp_memory_events.hpp  kp_memory_usage.cpp
profiling/nvprof-connector/: CMakeLists.txt  Makefile  kp_nvprof_connector.cpp  kp_nvprof_connector_domain.h
profiling/nvprof-focused-connector/: Makefile  kp_nvprof_focused_connector.cpp  kp_nvprof_focused_connector_domain.h
profiling/nvtx-connector/: CMakeLists.txt  Makefile  kp_nvtx_connector.cpp  kp_nvtx_connector_domain.h
profiling/nvtx-focused-connector/: CMakeLists.txt  Makefile  kp_nvtx_focused_connector.cpp  kp_nvtx_focused_connector_domain.h
profiling/papi-connector/: CMakeLists.txt  Makefile  README.md  kp_papi_connector.cpp  kp_papi_connector_domain.h
profiling/perfetto-connector/: CMakeLists.txt  Makefile  README.md  kokkos.cfg  libperfetto-connector.cc  libperfetto-connector.cpp
profiling/perfetto-connector/perfetto/: perfetto.cc
profiling/rocprof-connector/: Makefile  kp_rocprof_connector.cpp
profiling/roctx-connector/: CMakeLists.txt  Makefile  kp_roctx_connector.cpp
profiling/simple-kernel-timer/: CMakeLists.txt  Makefile  kp_json_writer.cpp  kp_kernel_info.h  kp_kernel_timer.cpp  kp_kernel_timer_json.cpp  kp_reader.cpp  kp_shared.cpp  kp_shared.h
profiling/simple-kernel-timer-json/: CMakeLists.txt  Makefile  kp_kernel_info.h  kp_kernel_timer.cpp
profiling/space-time-stack/: CMakeLists.txt  Makefile  kp_space_time_stack.cpp  kp_space_time_stack.hpp
profiling/systemtap-connector/: CMakeLists.txt  Makefile  kokkos_stap_example1.stp  kp_systemtap_connector.cpp  probes.d
profiling/timemory-connector/: CMakeLists.txt  Makefile  README.md  kp_timemory.cpp  kp_timemory.hpp
profiling/variorum-connector/: CMakeLists.txt  Makefile  README.md  configure_variorum.cmake  variorum-connector.cpp
profiling/vtune-connector/: CMakeLists.txt  Makefile  kp_vtune_connector.cpp  kp_vtune_connector_domain.h
profiling/vtune-focused-connector/: CMakeLists.txt  Makefile  kp_vtune_focused_connector.cpp  kp_vtune_focused_connector_domain.h
src/tools/apollo-tool/: Makefile  apollo-tuner.cpp  tuning_example.cpp
src/tools/caliper/: CMakeLists.txt  kp_kernel_timer.cpp  kp_memory_events.hpp
src/tools/caliper-connector/: CMakeLists.txt  Makefile  kp_caliper_connector.cpp  kp_memory_events.hpp
src/tools/exhaustive-tuner/: Makefile  exhaustive_tuner.cpp  multipolicy.cpp  tuning_example.cpp
src/tools/kernel-filter/: Makefile  kp_kernel_filter.cpp
src/tools/kernel-logger/: Makefile  kp_kernel_logger.cpp
src/tools/memory-events/: Makefile  kp_memory_events.cpp  kp_memory_events.hpp  kp_timer.hpp
src/tools/memory-hwm/: Makefile  kp_hwm.cpp
src/tools/memory-hwm-mpi/: kp_hwm_mpi.cpp
src/tools/memory-usage/: Makefile  kp_memory_usage.cpp  kp_timer.hpp
src/tools/nvprof-connector/: Makefile  kp_nvprof_connector.cpp  kp_nvprof_connector_domain.h
src/tools/nvprof-focused-connector/: Makefile  kp_nvprof_focused_connector.cpp  kp_nvprof_focused_connector_domain.h
src/tools/nvprof-region-connector/: Makefile  kp_nvprof_region_connector.cpp  kp_nvprof_region_connector_domain.h
src/tools/papi-connector/: Makefile  README.md  kp_papi_connector.cpp  kp_papi_connector_domain.h
src/tools/sanitizer-utility-library/: Makefile  kp_kernel_timer.cpp  (+1 more)
src/tools/timemory-connector/: CMakeLists.txt  README.md  kp_timemory.cpp  kp_timemory.hpp
src/tools/timemory-connector/sample/: kp_timemory_stub.cpp  sample.cpp
tests/: CMakeLists.txt  UnitTestMain.cpp
tests/sampler/: CMakeLists.txt  test_randomized_sampling.cpp
tests/space-time-stack/: CMakeLists.txt  test_demangling.cpp  test_space_time_stack.cpp
tuning/labrador/: .gitignore  Makefile  full_agg  labrador-exploration.cpp  labrador-exploration.hpp  labrador-explorer.cpp  labrador-retriever.cpp  labrador-scholar.py
(+33 files in other folders)
